kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: backend-api
          image: ghcr.io/shub-saini/k8s-api-devops-deployment:sha-577357511aeb4be53fb8df8e1770a54efcdd0bc2
          # Image tag will be automatically updated during cicd
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true #
            capabilities:
              drop:
                - ALL # Drop all Linux capabilities

          livenessProbe:
            httpGet:
              path: /healthz # Endpoint to check if app is alive
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3

          # resources:
          #   requests:
          #     memory: '256Mi' # Minimum guaranteed
          #     cpu: '250m' # 0.25 CPU cores
          #   limits:
          #     memory: '512Mi' # Maximum allowed
          #     cpu: '500m' # 0.5 CPU cores
